fixed nav alignment and highlight

--- a/scienceMuseum/scss/_large.scss
+++ b/scienceMuseum/scss/_large.scss
@@ -6,7 +6,7 @@
 nav {
     ul {
         //padding-left: $gutter;
-        padding: 0 $gutter;
+        //padding: 0 $gutter;
     }
 
     li {width:auto;}
